--- a/cart.html
+++ b/cart.html
@@ -17,6 +17,7 @@
                 <li><a href="products.html">Products</a></li>
                 <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="admin.html">Admin</a></li>
             </ul>
         </nav>
     </header>
@@ -26,11 +27,13 @@
             <div class="cart-list" id="cart-list">
                 <!-- Cart items will be loaded here dynamically -->
             </div>
+            <button onclick="clearCart()">Clear Cart</button>
+            <button onclick="checkout()">Checkout</button>
         </section>
     </main>
     <footer>
         <p>&copy; 2024 Aenzbi Ecommerce. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="cart.js"></script>
 </body>
 </html>
