--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aenzbi Ecommerce</title>
+    <title>Home - Aenzbi Ecommerce</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,21 +17,16 @@
                 <li><a href="products.html">Products</a></li>
                 <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="admin.html">Admin</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="hero">
-            <h2>Welcome to Aenzbi</h2>
-            <p>Your one-stop shop for all your needs.</p>
+            <h2>Welcome to Aenzbi Ecommerce</h2>
+            <p>Shop the best products at unbeatable prices.</p>
+            <a href="products.html" class="btn">Browse Products</a>
         </section>
-        <section class="products">
-            <h2>Featured Products</h2>
-            <div class="product-list" id="product-list">
-                <!-- Products will be loaded here dynamically -->
-            </div>
-        </section>
-        <button onclick="checkout()">Checkout</button>
     </main>
     <footer>
         <p>&copy; 2024 Aenzbi Ecommerce. All rights reserved.</p>
