--- a/products.html
+++ b/products.html
@@ -17,6 +17,7 @@
                 <li><a href="products.html">Products</a></li>
                 <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="admin.html">Admin</a></li>
             </ul>
         </nav>
     </header>
