--- a/admin.html
+++ b/admin.html
@@ -17,7 +17,7 @@
                 <li><a href="products.html">Products</a></li>
                 <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="admin.html">Admin</a></li>
+                <li><a href="admin.html">Productmanagement</a></li>
             </ul>
         </nav>
     </header>
