--- a/cart.html
+++ b/cart.html
@@ -29,6 +29,8 @@
             </div>
             <button onclick="clearCart()">Clear Cart</button>
             <button onclick="checkout()">Checkout</button>
+            <button id="clear-cart-button">Clear Cart</button>
+<button id="checkout-button">Checkout</button>
         </section>
     </main>
     <footer>
